# synapse2

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.example.toml  deny.toml  docker-compose.prod.yml  entrypoint.sh  install.sh  lefthook.yml  server.json
.cargo/: config.toml
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  synapse-mcp-gap-review.md
.full-review/api/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
.full-review/cli/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
.full-review/mcp/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
.full-review/web/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release.yml
apps/web/: biome.json  package.json  pnpm-lock.yaml
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  separator.tsx  skeleton.tsx  tabs.tsx
config/: Dockerfile
docs/: API.md  ARCHITECTURE.md  AUTH.md  CI.md  CLI_DESTRUCTIVE_SMOKE.md  CONFIG.md  DOCKER.md  ENV.md  MCP_SCHEMA.md  PLUGINS.md  SCRIPTS.md
docs/sessions/: 2026-05-28-security-fixes-cache-version-bump.md  2026-06-12-synapse2-review-sweep.md
plugins/synapse2/: CLAUDE.md  README.md  gemini-extension.json
plugins/synapse2/.claude-plugin/: plugin.json
plugins/synapse2/.codex-plugin/: plugin.json
plugins/synapse2/hooks/: plugin-setup.sh  watch.sh
plugins/synapse2/monitors/: monitors.json
plugins/synapse2/skills/synapse2/: SKILL.md
plugins/synapse2/skills/synapse2/references/: action-reference.md
scripts/: README.md  asciicheck.py  blob-size-allowlist.txt  check-coupled-files.sh  check-file-size.sh  check-openapi.py  check-rust-module-size.sh  check-schema-docs.py  test-template-features.sh  validate-plugin-layout.sh
src/: actions.rs  actions_tests.rs  api.rs  api_tests.rs  app.rs  cache.rs  cache_tests.rs  cli.rs  cli_tests.rs  color_policy_tests.rs  compose.rs  compose_tests.rs  config.rs  config_tests.rs  docker.rs  docker_client.rs  docker_client_tests.rs  elicitation_gate.rs  elicitation_gate_tests.rs  fanout.rs  fanout_tests.rs  flux_service.rs  flux_service_tests.rs  formatters.rs  formatters_tests.rs  host_config.rs  host_config_tests.rs  lib.rs  logging.rs  main.rs  mcp.rs  runtime_budget.rs  runtime_budget_tests.rs  scaffold.rs  scaffold_tests.rs  scout.rs  scout_service.rs  server_tests.rs  ssh.rs  ssh_tests.rs  (+3 more)
src/actions/: dispatch.rs  flux.rs  scout.rs
src/cli/: color.rs  doctor.rs  doctor_tests.rs  flux.rs  help.rs  help_tests.rs  scout.rs  setup.rs  setup_tests.rs
src/cli/doctor/: checks.rs
src/cli/flux/: host.rs  parse.rs
src/cli/help/: catalog.rs
src/config/: env.rs
src/docker_client/: bollard_client.rs  mock.rs  traits.rs
src/flux_service/: compose_driver.rs  compose_driver_tests.rs  compose_ops.rs  compose_ops_tests.rs  container_driver.rs  container_driver_tests.rs  container_lifecycle.rs  container_lifecycle_tests.rs  container_read.rs  container_read_tests.rs  docker.rs  docker_driver.rs  docker_driver_tests.rs  docker_tests.rs  host.rs  host_driver.rs  host_driver_tests.rs
src/formatters/: compose.rs  container.rs  docker.rs  host.rs  scout.rs
src/logging/: formatter.rs
src/mcp/: help.rs  help_tests.rs  resources.rs  resources_tests.rs  response.rs  rmcp_server.rs  rmcp_server_tests.rs  schemas.rs  schemas_tests.rs  tools.rs  transport.rs
src/scout_service/: exec.rs  exec_tests.rs  fs.rs  fs_tests.rs  logs.rs  logs_tests.rs  proc.rs  zfs.rs  zfs_tests.rs
src/server/: routes.rs
src/ssh/: forward.rs  known_hosts.rs  pool.rs
tests/: api_routes.rs  cli_parse.rs  cli_parse_container.rs  cli_parse_docker.rs  cli_parse_flux.rs  cli_parse_scout.rs  parity.rs  plugin_contract.rs  ssh_pool.rs  tool_dispatch.rs
