# =============================================================================
# Cargo.toml — Workspace root for the synapse2 project
#
# TEMPLATE: This is a cargo workspace containing two crates:
#   - . (the main library/binary crate)
#   - xtask/ (repo automation: dist, ci, symlink-docs, check-env)
#
# When creating your own server, rename "synapse2" and add your own
# workspace members if needed.
# =============================================================================

[workspace]
# TEMPLATE: Add any additional crates here (e.g. a shared types crate).
members = [".", "xtask"]
resolver = "2"

[package]
name = "synapse2"
version = "0.5.2"
edition = "2024"
rust-version = "1.90"
description = "Rust MCP and CLI server for local Synapse workflows (flux + scout tools)"
autobins = false

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "2.0.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
  "elicitation",
  "schemars",
] }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "1.1"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client. (Kept at 0.12: reqwest 0.13 renamed the rustls-tls feature flags;
# deduping with lab-auth's 0.13 is deferred to a focused follow-up.)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Platform dirs — for default_data_dir() (~/.synapse2 detection)
# TEMPLATE: Used in config.rs default_data_dir(). Keep this dep.
dirs = "6"

# SSH config parser for ~/.ssh/config auto-discovery
ssh2-config = "0.7"

# Errors
anyhow = "1"
thiserror = "2"

# Tower middleware (direct dep for the custom concurrency-limit Layer in server/routes.rs;
# already present transitively via axum).
tower = "0.5"

# SSH transport (scout remote exec + flux forwarded docker socket).
# process-mux delegates command execution to OpenSSH's mux client, matching the
# mux sockets created by local ssh configs on the managed fleet.
openssh = "0.11"

# Object-safe async trait (SshExecutor → Box<dyn SshExecutor>; Confirmer gate).
async-trait = "0.1"

# Concurrent hash map (cache + per-host SSH session pool).
dashmap = "6"

# Docker Engine API client (flux docker/container/compose ops). Cached per host;
# remote hosts connect through B1's SSH-forwarded unix socket. bollard's `Docker`
# is cheap to Clone (Arc-internal), so each cache entry holds it by value.
bollard = "0.21"

# Stream combinators for bollard logs()/stats() streaming surfaces.
futures-util = "0.3"

# Static asset embedding (web UI)
include_dir = { version = "0.7", optional = true }

[features]
default = ["web"]
web = ["include_dir"]
test-support = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
synapse2 = { path = ".", features = ["test-support"] }
# Bytes is bollard's payload type for LogOutput frames; needed to construct
# canned log frames in B8 container_read unit tests.
bytes = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "2.0.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
